--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Reopen Tab Later",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "description": "Reopen tabs later - hide a tab now and get it back exactly when you want.",
   "action": {
-    "default_title": "Snooze this tab",
+    "default_title": "Reopen Tab Later",
     "default_popup": "popup.html"
   },
   "background": {
