--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Reopen Tab Later",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "Reopen tabs later - hide a tab now and get it back exactly when you want.",
   "action": {
     "default_title": "Reopen Tab Later",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/16.png",
+      "24": "icons/48.png",
+      "32": "icons/48.png"
+    }
   },
   "background": {
     "service_worker": "sw.js"
@@ -16,7 +21,7 @@
     "48": "icons/48.png",
     "128": "icons/128.png"
   },
-  "permissions": ["tabs", "storage", "alarms", "notifications", "activeTab"],
+  "permissions": ["tabs", "storage", "alarms", "notifications"],
   "commands": {
     "snooze-active": { "description": "Snooze active tab" },
     "open-sleeping": { "description": "Open Sleeping Tabs list" },
